adding slide updates

--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -2,20 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# A Functional Introduction To Python\n",
     "## <span style=\"color:blue\"> Section 1.  Introductory Concepts </span>\n",
     "## Section 2.  Functions\n",
     "## Section 3.  Control Structures\n",
-    "## Section 4.  Intermediate Topics"
+    "## Section 4.  Intermediate Topics\n",
+    "## Section 5.  IO"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "#### Section 1:  Introductory Concepts Outline (This for a training class)\n",
+    "#### Section 1:  Introductory Concepts Outline \n",
     "*  Procedural Statements\n",
     "*  Strings and String Formatting\n",
     "*  Numbers and Arithmetic Operations\n",
@@ -25,7 +34,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     " ### Procedural Statements\n",
     " Procedural statements are literally statements that  can be issued one line at a time.  Below are types of procedural statements.  These statements can be run in:\n",
@@ -37,15 +50,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     " ##### Printing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,15 +82,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Create Variable and Use Variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -85,15 +114,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Multiple procedural statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -113,15 +150,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Adding Numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -129,7 +174,7 @@
        "2"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,15 +185,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Adding phrases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -156,7 +209,7 @@
        "'armbar'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +220,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Complex statements\n",
     "More complex statements can be created that use data structures like the belts variable, which is a list."
@@ -175,8 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -201,7 +262,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     " ### Strings and String Formatting\n",
     "Strings are a sequence of characters and they are often programmatically formatted.  Almost all Python programs have strings because they can be used to send messages to users who use the program.  When creating strings there are few core concepts to understand:\n",
@@ -225,15 +290,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Basic String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "basic_string = \"Brazilian Jiu Jitsu\""
@@ -241,7 +314,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Splitting String\n",
     "Turn a string in a list by splitting on spaces, or some other thing"
@@ -249,8 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -258,7 +339,7 @@
        "['Brazilian', 'Jiu', 'Jitsu']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,8 +351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -279,7 +364,7 @@
        "['Brazilian', 'Jiu', 'Jitsu']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +377,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### All Capital\n",
     "Turn a string into all Capital Letter"
@@ -300,8 +389,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -309,7 +402,7 @@
        "'BRAZILIAN JIU JITSU'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +413,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Slicing Strings\n",
     "Strings can be referenced by length and sliced"
@@ -328,8 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -337,7 +438,7 @@
        "'Br'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,8 +450,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -358,7 +463,7 @@
        "19"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,15 +475,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Strings Can Be Added Together\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -386,7 +499,7 @@
        "'Brazilian Jiu Jitsu is my favorite Martial Art'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +510,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Strings Can Be Formatted in More Complex Ways\n",
     "One of the best ways to format a string in modern Python 3 is to use f-strings"
@@ -405,8 +522,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -414,7 +535,7 @@
        "'I love practicing my favorite Martial Art, Brazilian Jiu Jitsu'"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,15 +546,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Strings Can Use Triple Quotes to Wrap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -441,7 +570,7 @@
        "'\\nThis phrase is multiple sentenances long.\\nThere phrase can be formatted like simpler sentances,\\nfor example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu\\n'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +585,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Line Breaks Can Be Removed with Replace\n",
     "The last long line contained line breaks, which are the **\\n** character, and they can be removed by using the replace method"
@@ -464,8 +597,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -473,7 +610,7 @@
        "'This phrase is multiple sentenances long.There phrase can be formatted like simpler sentances,for example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +625,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Numbers and Arithmetic Operations\n",
     "Python is also a built-in calculator.  Without installing any additional libraries it can do many simple and complex arithmetic operations."
@@ -496,15 +637,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Adding and Subtracting Numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -521,15 +670,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Multiplication with Decimals\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -548,7 +705,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Using Exponents\n",
     "Using the math library it is straightforward to call 2 to the 3rd power"
@@ -556,8 +717,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -565,7 +730,7 @@
        "8.0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +742,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Converting Between different numerical types\n",
     "There are many numerical forms to be aware of in Python.\n",
@@ -588,8 +757,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -607,8 +780,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -626,7 +803,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Numbers can also be rounded\n",
     "Below a decimal with many digits is rounded to two decimals"
@@ -634,8 +815,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -643,7 +828,7 @@
        "1.91"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +840,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     " ### Data Structures\n",
     "Python has a couple of core Data Structures that are used very frequently\n",
@@ -668,7 +857,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Dictionaries\n",
     "Dictionaries are good at solving many problems, much like Python.  In the example below, a list of Brazilian Jiu Jitsu attacks are put into a dictionary.  The \"key\" is the attack, and the \"value\" is the half of the body the attack is on."
@@ -676,8 +869,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "submissions = {\"armbar\": \"upper_body\", \n",
@@ -688,16 +885,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "A common dictionary pattern is to iterate on a dictionary by using the items method.  In the example below the key and the value are printed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 25,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -718,15 +922,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Dictionaries can also be used to filter.  In the example below, only the submission attacks on the upper body are displayed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -747,15 +959,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Dictionary keys and values can also be selected:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -773,7 +993,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Lists\n",
     "Lists are also very commonly used in Python.  They allow for sequential collections.  Lists can hold dictionaries, just as dictionaries can hold lists."
@@ -781,8 +1005,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "list_of_bjj_positions = [\"mount\", \"full-guard\", \"half-guard\", \n",
@@ -792,8 +1020,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -813,15 +1045,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "Lists can also be used to select elements by slicing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -841,6 +1081,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -856,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
